<resources>
    <string name="app_name">EmployeeCode</string>
    <string name="home_name">Home</string>
    <string name="scanner_name">Scanner</string>
    <string name="create_employee">Registration</string>
    <string name="save">Save</string>
    <string name="employee_code_hint">Employee code</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="position_hint">Position</string>
    <string name="issued_date_hint">Issued date</string>
    <string name="expired_date_hint">Expired date</string>
    <string name="submit">Submit</string>
    <string name="id_no_field">ID NO:</string>
    <string name="issued_field">ISSUED:</string>
    <string name="expired_field">EXPIRED:</string>
    <string name="scanner">Scanner</string>
    <string name="no_barcodes_found">No barcodes found.</string>
    <string name="not_registered_barcode">This barcode is not registered.</string>
    <string name="upload_file">Upload file</string>
    <string name="check_digit_field">CHECK DIGIT:</string>
    <string name="show_details">Show Details</string>
</resources>