<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scanner.ScannerFragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_back_24"
        android:backgroundTint="@color/prussian_blue"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/page_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/scanner"
        android:textColor="@color/prussian_blue"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/upload_file_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/container_upload_button"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/upload_file"
        android:textColor="@color/prussian_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/page_title">

        <ImageView
            android:id="@+id/barcode_preview"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_barcodes_found_err_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.9"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/no_barcodes_found"
            android:textColor="@color/prussian_blue"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barcode_preview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/success_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/preview_layout">

        <TextView
            android:id="@+id/id_num_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/id_no_field"
            android:textColor="@color/prussian_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:alpha="0.8"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/prussian_blue"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/id_num_title"
            app:layout_constraintTop_toTopOf="@id/id_num_title" />

        <TextView
            android:id="@+id/check_digit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/check_digit_field"
            android:textColor="@color/prussian_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_num_title" />

        <TextView
            android:id="@+id/check_digit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:alpha="0.8"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/prussian_blue"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/check_digit_title"
            app:layout_constraintTop_toTopOf="@id/check_digit_title" />


        <Button
            android:id="@+id/show_details_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/show_details"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_digit_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>