<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.EmployeeDetailsFragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_back_24"
        android:backgroundTint="@color/prussian_blue"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/id_code_page_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_code_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/prussian_blue"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_save_24"
        android:backgroundTint="@color/prussian_blue"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/id_code_page_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    image region -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_code_page_title">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:background="@color/ivory"
            android:padding="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:strokeColor="@color/amazon"
            app:strokeWidth="2dp" />

        <ImageView
            android:id="@+id/no_image_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_person_24"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            app:layout_constraintLeft_toLeftOf="@id/profile_image"
            app:layout_constraintRight_toRightOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@id/profile_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/prussian_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_layout" />

    <TextView
        android:id="@+id/work_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.9"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/prussian_blue"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />


    <TextView
        android:id="@+id/id_num_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/id_no_field"
        android:textColor="@color/prussian_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work_position" />

    <TextView
        android:id="@+id/id_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0.8"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/prussian_blue"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/id_num_title"
        app:layout_constraintTop_toTopOf="@id/id_num_title" />

    <TextView
        android:id="@+id/issued_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/issued_field"
        android:textColor="@color/prussian_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_num_title" />

    <TextView
        android:id="@+id/issued_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0.8"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/prussian_blue"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/issued_date_title"
        app:layout_constraintTop_toTopOf="@id/issued_date_title" />

    <TextView
        android:id="@+id/expired_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/expired_field"
        android:textColor="@color/prussian_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/issued_date_title" />

    <TextView
        android:id="@+id/expired_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0.8"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/prussian_blue"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/expired_date_title"
        app:layout_constraintTop_toTopOf="@id/expired_date_title" />

    <FrameLayout
        android:id="@+id/barcode_view"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/expired_date_title" />

</androidx.constraintlayout.widget.ConstraintLayout>